@@ -44,8 +44,10 @@ New features
 - R's own printing of warnings if now transformed to warnings of type
   `rinterface.RRuntimeWarning` (it used to be a regular `UserWarning`)
 
-- The family of functions `src_*` in the R package `dplyr` have aliases
-  in the module :mod:`rpy2.robjects.lib.dplyr`.
+- The family of functions `src_*` and the function `tbl` in the R package
+  `dplyr` have aliases in the module :mod:`rpy2.robjects.lib.dplyr`, and
+  a class :class:`DataSource` has been added for convenience.
+  
   
 Changes
 -------
